# single-html-page-project

./: pyproject.toml  requirements.txt
