[tool.poetry]
name = "single-html-page-project"
version = "0.1.0"
description = "An autograder for a student's single HTML page web project (designed to be forked for each student)."
authors = ["hundredvisionsguy <cwinikka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "single_html_page_project"}]

[tool.poetry.dependencies]
python = "^3.9"
file-clerk = "*"
webcode-tk = "*"
bs4 = "*"
pytest = "*"
pytest-html = "*"
pypiwin32 = "*"


[tool.poetry.dev-dependencies]
flake8 = "*"
pre-commit = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
